--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,15 @@
 spring.output.ansi.enabled=always
+
+spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/pets_db
+spring.datasource.username=springsecurity@localhost
+spring.datasource.password=springsecurity
+spring.datasource.driver-class-name =com.mysql.jdbc.Driver
+
+petdetailsService.url = http://localhost:8080/petdetailsService/petDetails/
+
+
+#CREATE USER 'springsecurity@localhost' IDENTIFIED BY 'springsecurity';
+#GRANT ALL PRIVILEGES ON pets_db.* TO 'springsecurity@localhost' WITH GRANT OPTION;
+#system mysql -u springsecurity@localhost -p
