--- a/pom.xml
+++ b/pom.xml
@@ -99,6 +99,13 @@
             <version>2.5.4</version>
         </dependency>
 
+        <!-- https://mvnrepository.com/artifact/org.springframework.security/spring-security-test -->
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-test</artifactId>
+            <version>5.5.3</version>
+            <scope>test</scope>
+        </dependency>
 
 
 
